--- a/index.css
+++ b/index.css
@@ -3,12 +3,15 @@ body{
 }
 
 .banner{
-    color: red;
     text-align: center;
     padding: 5%;
     background-image: url('banner.jpg');
     font-size: 30px;
     font-family: Arial, Helvetica, sans-serif;
+}
+
+p{
+    color: red;
 }
 
 #content{
